src/tests/testfiles/binary-operators/types-11.txt
testfiles/binary-operators/types-11.c:2:9: error: invalid operands to comparison '<' (have 'char' and 'int')
'a' < 1;
    ^
